src/test/ui/compare-method/proj-outlives-region.stderr
error[E0276]: impl has stricter requirements than trait, #[deny(extra_requirement_in_impl)] on by default
  --> $DIR/proj-outlives-region.rs:22:5
   |
17 |     fn foo() where T: 'a;
   |     --------------------- definition of `foo` from trait
...
22 |     fn foo() where U: 'a { } //~ ERROR E0276
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ impl has extra requirement `U: 'a`
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #37166 <https://github.com/rust-lang/rust/issues/37166>

error: aborting due to previous error

